--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Dec 07 21:19:39 GMT+08:00 2015
-sdk.dir=D\:\\SDK
+#Thu Dec 24 14:32:00 CST 2015
+sdk.dir=D\:\\Android\\sdk
